# MLOps

./: .env  .gitignore  Dockerfile  client_secrets.json  database.csv  link_to_registry.py  main.py  ml_app.py  model.pth  my_model_artifact.txt  pyproject.toml  requirements.txt  requirements_tests.txt  response_content.txt  sweep.yaml  tasks.py  test.py  wandb.docker
.dvc/: config
.github/workflows/: codecheck.yaml  tests.yaml
data/: .gitignore  corruptmnist.dvc  corruptmnist_v2.dvc
src/: data_solution.py  model_solution.py  test_model.py  train.py
wandb/: settings
